--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -22,9 +22,9 @@ on early-init
 
 on init
 
-sysclktz 0
+    sysclktz 0
 
-loglevel 64
+    loglevel 64
 
 # setup the global environment
     export PATH /sbin:/vendor/bin:/system/sbin:/system/bin:/system/xbin
@@ -50,7 +50,8 @@ loglevel 64
     mount cgroup none /acct cpuacct
     mkdir /acct/uid
 
-    mkdir /system
+    # /system is owned by Mer
+    #mkdir /system
     mkdir /data 0771 system system
     mkdir /cache 0771 system cache
     mkdir /config 0500 root root
@@ -379,16 +380,17 @@ on property:vold.decrypt=trigger_shutdown_framework
 
 ## Daemon processes to be run by init.
 ##
-service ueventd /sbin/ueventd
-    class core
-    critical
-    seclabel u:r:ueventd:s0
+# Not used by Mer
+#service ueventd /sbin/ueventd
+#    class core
+#    critical
+#    seclabel u:r:ueventd:s0
 
-on property:selinux.reload_policy=1
-    restart ueventd
-    restart installd
-    chown -R system system /selinux/booleans
-    chown -R system system /sys/fs/selinux/booleans
+#on property:selinux.reload_policy=1
+#    restart ueventd
+#    restart installd
+#    chown -R system system /selinux/booleans
+#    chown -R system system /sys/fs/selinux/booleans
 
 service console /system/bin/sh
     class core
@@ -414,26 +416,29 @@ service adbd /sbin/adbd
 on property:ro.kernel.qemu=1
     start adbd
 
+# Mer will use a linux build of servicemanager eventually
 service servicemanager /system/bin/servicemanager
     class core
     user system
     group system
-    critical
-    onrestart restart zygote
-    onrestart restart media
-    onrestart restart surfaceflinger
-    onrestart restart drm
+#    critical
+#    onrestart restart zygote
+#    onrestart restart media
+#    onrestart restart surfaceflinger
+#    onrestart restart drm
 
-service vold /system/bin/vold
-    class core
-    socket vold stream 0660 root mount
-    ioprio be 2
+# Not used in Mer
+#service vold /system/bin/vold
+#    class core
+#    socket vold stream 0660 root mount
+#    ioprio be 2
 
-service netd /system/bin/netd
-    class main
-    socket netd stream 0660 root system
-    socket dnsproxyd stream 0660 root inet
-    socket mdns stream 0660 root system
+#Not used in Mer
+#service netd /system/bin/netd
+#    class main
+#    socket netd stream 0660 root system
+#    socket dnsproxyd stream 0660 root inet
+#    socket mdns stream 0660 root system
 
 service debuggerd /system/bin/debuggerd
     class main
@@ -445,30 +450,36 @@ service ril-daemon /system/bin/rild
     user root
     group radio cache inet misc audio sdcard_r sdcard_rw qcom_oncrpc qcom_diag log
 
+# Disabled in Mer - used only during porting atm
 service surfaceflinger /system/bin/surfaceflinger
     class main
     user system
     group graphics drmrpc
     onrestart restart zygote
+    disabled
 
+# Disabled in Mer
 service zygote /system/bin/app_process -Xzygote /system/bin --zygote --start-system-server
     class main
     socket zygote stream 660 root system
     onrestart write /sys/android_power/request_state wake
     onrestart write /sys/power/state on
-    onrestart restart media
-    onrestart restart netd
+#    onrestart restart media
+#    onrestart restart netd
+    disabled
 
 service drm /system/bin/drmserver
     class main
     user drm
     group drm system inet drmrpc
 
+# Disabled in Mer
 service media /system/bin/mediaserver
     class main
     user media
     group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc qcom_diag
     ioprio rt 4
+    disabled
 
 service bootanim /system/bin/bootanimation
     class main
@@ -497,11 +508,13 @@ service mtpd /system/bin/mtpd
     disabled
     oneshot
 
+# disabled in Mer
 service keystore /system/bin/keystore /data/misc/keystore
     class main
     user keystore
     group keystore drmrpc
     socket keystore stream 666
+    disabled
 
 service dumpstate /system/bin/dumpstate -s
     class main
@@ -509,6 +522,7 @@ service dumpstate /system/bin/dumpstate -s
     disabled
     oneshot
 
-service sshd /system/bin/start-ssh
-    class main
-    disabled
+# Use Mer sshd
+#service sshd /system/bin/start-ssh
+#    class main
+#    disabled
