Disable usb import
Change-Id: I8aba60bc79fb4aab3854f0569b325ad69c5126d4
Signed-off-by: David Greaves <david@dgreaves.com>

--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -4,7 +4,8 @@
 # This is a common source of Android security bugs.
 #
 
-import /init.usb.rc
+# Mer handles usb stuff
+#import /init.usb.rc
 import /init.${ro.hardware}.rc
 import /init.trace.rc
 import /init.carrier.rc
